# jecq

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.linux  INSTALL.md  LICENSE  README.md  STATISTICS.md  build.ps1  build.sh  build_demo.ps1  build_demo.sh  install_mkl.sh  install_requirements.sh  mypy.ini  requirements.linux
.github/workflows/: build.yml
cmake/: jecq-config.cmake.in  link_to_jecq_lib.cmake
demos/: demo_parameter_optimize.py  demo_resource_compare.py  demo_sample_search.py  demo_search_accuracy_compare.py  requirements.txt
demos/utils/: __init__.py  common.py  embeddings_container.py  example_embeddings.py  genetic_algorithm.py  models.py  params_evaluate.py  resources.py  search.py  stats.py  vector_indices.py
jecq/: CMakeLists.txt  feature_classifier.cpp  feature_classifier.h  index_itq_flat.cpp  index_itq_flat.h  index_ivf_jecq.cpp  index_ivf_jecq.h  index_jecq.cpp  index_jecq.h  index_jecq_base.cpp  index_jecq_base.h  itq_quantizer.cpp  itq_quantizer.h
jecq/python/: CMakeLists.txt  __init__.py  class_wrappers.py  loader.py  requirements.txt  setup.py  swigjecq.swig
tests/: CMakeLists.txt  datasets.cpp  datasets.h  index_factory.cpp  index_factory.h  index_helpers.cpp  index_helpers.h  test_index_common.cpp  test_index_itq_flat.cpp  test_index_ivf_jecq.cpp  test_index_jecq.cpp  test_itq_quantizer.cpp  utils.cpp  utils.h
